--- a/settings.json
+++ b/settings.json
@@ -1,4 +1,6 @@
 {
+	"cloudinary_key": "754714459692734",
+	"cloudinary_secret": "rPPXD3rZM_GCjODvh0T70XeDCSw",
 	"public": {
 		"analyticsSettings": {
 			"Google Analytics": {
